Closes #127.  Java 17